version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/AdditiveManufacturing/PredefinedAMSupport.rst.txt
.. vale off



:class:`PredefinedAMSupport`
============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.AdditiveManufacturing.PredefinedAMSupport

   Bases: :py:obj:`object`


   
   Defines a PredefinedAMSupport.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: PredefinedAMSupport

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddCommandSnippet`
            - Creates a new CommandSnippet
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DensityMultiple`
            - Gets or sets the DensityMultiple.
          * - :py:attr:`~ElasticModulusMultipleInX`
            - Gets or sets the ElasticModulusMultipleInX.
          * - :py:attr:`~ElasticModulusMultipleInY`
            - Gets or sets the ElasticModulusMultipleInY.
          * - :py:attr:`~ElasticModulusMultipleInZ`
            - Gets or sets the ElasticModulusMultipleInZ.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~MaterialMultiplier`
            - Gets or sets the MaterialMultiplier.
          * - :py:attr:`~MultiplierEntry`
            - Gets or sets the MultiplierEntry.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ShearModulusMultipleInXY`
            - Gets or sets the ShearModulusMultipleInXY.
          * - :py:attr:`~ShearModulusMultipleInXZ`
            - Gets or sets the ShearModulusMultipleInXZ.
          * - :py:attr:`~ShearModulusMultipleInYZ`
            - Gets or sets the ShearModulusMultipleInYZ.
          * - :py:attr:`~SupportType`
            - Gets or sets the SupportType.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~ThermalConductivityMultipleInX`
            - Gets or sets the ThermalConductivityMultipleInX.
          * - :py:attr:`~ThermalConductivityMultipleInY`
            - Gets or sets the ThermalConductivityMultipleInY.
          * - :py:attr:`~ThermalConductivityMultipleInZ`
            - Gets or sets the ThermalConductivityMultipleInZ.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~Volume`
            - Gets or sets the Volume.
          * - :py:attr:`~WallSpacing`
            - Gets or sets the WallSpacing.
          * - :py:attr:`~WallThickness`
            - Gets or sets the WallThickness.







Property detail
---------------
.. py:property:: Children
   :type: Optional[list[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DensityMultiple
   :type: Optional[float]

   
   Gets or sets the DensityMultiple.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElasticModulusMultipleInX
   :type: Optional[float]

   
   Gets or sets the ElasticModulusMultipleInX.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElasticModulusMultipleInY
   :type: Optional[float]

   
   Gets or sets the ElasticModulusMultipleInY.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElasticModulusMultipleInZ
   :type: Optional[float]

   
   Gets or sets the ElasticModulusMultipleInZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSAMSupportAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialMultiplier
   :type: Optional[float]

   
   Gets or sets the MaterialMultiplier.
















   ..
       !! processed by numpydoc !!

.. py:property:: MultiplierEntry
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AMMultiplierEntryType]

   
   Gets or sets the MultiplierEntry.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearModulusMultipleInXY
   :type: Optional[float]

   
   Gets or sets the ShearModulusMultipleInXY.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearModulusMultipleInXZ
   :type: Optional[float]

   
   Gets or sets the ShearModulusMultipleInXZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearModulusMultipleInYZ
   :type: Optional[float]

   
   Gets or sets the ShearModulusMultipleInYZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: SupportType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AMSupportType]

   
   Gets or sets the SupportType.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThermalConductivityMultipleInX
   :type: Optional[float]

   
   Gets or sets the ThermalConductivityMultipleInX.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThermalConductivityMultipleInY
   :type: Optional[float]

   
   Gets or sets the ThermalConductivityMultipleInY.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThermalConductivityMultipleInZ
   :type: Optional[float]

   
   Gets or sets the ThermalConductivityMultipleInZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: Volume
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the Volume.
















   ..
       !! processed by numpydoc !!

.. py:property:: WallSpacing
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the WallSpacing.
















   ..
       !! processed by numpydoc !!

.. py:property:: WallThickness
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the WallThickness.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddCommandSnippet() -> Ansys.ACT.Automation.Mechanical.CommandSnippet

   
   Creates a new CommandSnippet

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: list[ChildrenType]) -> list[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on